force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentRequest_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>DocumentRequest_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類督促_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentRequest_PersonInCharge_old</relationshipName>
    <type>Lookup</type>
</CustomField>