force-app/main/default/objects/Customercenter_CallData__c/fields/Documents_Document_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Documents_Document_Shipping__c</fullName>
    <label>書類発送</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_content</valueSetName>
    </valueSet>
</CustomField>