force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentSending_Address__c.field-meta.xml
<CustomField>
    <fullName>DocumentSending_Address__c</fullName>
    <label>書類発送_送付先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>