force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentSending_AddresseeSCorporateName__c.field-meta.xml
<CustomField>
    <fullName>DocumentSending_AddresseeSCorporateName__c</fullName>
    <label>書類発送_宛名法人名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>