force-app/main/default/objects/Customercenter_CallData__c/fields/DriverLimitations__c.field-meta.xml
<CustomField>
    <fullName>DriverLimitations__c</fullName>
    <label>運転者限定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>本人夫婦</fullName>
            </value>
            <value>
                <fullName>臨時運転（ベーシス）</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>