force-app/main/default/objects/Customercenter_CallData__c/fields/E_SupplyStop_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>E_SupplyStop_BusinessContact__c</fullName>
    <label>自継停止_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>