force-app/main/default/objects/Customercenter_CallData__c/fields/E_SupplySuspension_InputDate__c.field-meta.xml
<CustomField>
    <fullName>E_SupplySuspension_InputDate__c</fullName>
    <label>自継停止_入力日</label>
    <type>Date</type>
</CustomField>