force-app/main/default/objects/Customercenter_CallData__c/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <label>社員ｺｰﾄﾞ（組合員ｺｰﾄﾞ）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>