force-app/main/default/objects/Customercenter_CallData__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>使用人（年齢）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>