force-app/main/default/objects/Customercenter_CallData__c/fields/EndInsurance__c.field-meta.xml
<CustomField>
    <fullName>EndInsurance__c</fullName>
    <label>保険終期</label>
    <type>Date</type>
</CustomField>