force-app/main/default/objects/Customercenter_CallData__c/fields/ExpectedDateOfChangeOfAddress__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDateOfChangeOfAddress__c</fullName>
    <label>転居予定日</label>
    <type>Date</type>
</CustomField>