force-app/main/default/objects/Customercenter_CallData__c/fields/ExpectedShippingDate_Latest__c.field-meta.xml
<CustomField>
    <fullName>ExpectedShippingDate_Latest__c</fullName>
    <label>発送予定日（最新）</label>
    <type>Date</type>
</CustomField>