force-app/main/default/objects/Customercenter_CallData__c/fields/Field1PostingWaitingListManagement__c.field-meta.xml
<CustomField>
    <fullName>Field1PostingWaitingListManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>計上待ち管理</label>
    <type>Checkbox</type>
</CustomField>