force-app/main/default/objects/Customercenter_CallData__c/fields/FixedAmountForBodilyInjury__c.field-meta.xml
<CustomField>
    <fullName>FixedAmountForBodilyInjury__c</fullName>
    <label>人傷定額払</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>傷害一時金</fullName>
            </value>
            <value>
                <fullName>部位症状(ベーシス)</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>