force-app/main/default/objects/Customercenter_CallData__c/fields/IncomingCall__c.field-meta.xml
<CustomField>
    <fullName>IncomingCall__c</fullName>
    <label>入電者範囲</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>受付可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>