force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_BusinessContact__c</fullName>
    <label>書類不備_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>