force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_CorporationName__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_CorporationName__c</fullName>
    <label>書類不備_宛名法人名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>