force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_Document_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Document_Arrival_Date__c</fullName>
    <label>不備書類到着日</label>
    <type>Date</type>
</CustomField>