force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_IncomingCall_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_IncomingCall_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類不備_入電_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incomplete_IncomingCall_old</relationshipName>
    <type>Lookup</type>
</CustomField>