force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_IncomingCallNumber__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_IncomingCallNumber__c</fullName>
    <label>書類不備_着信電話番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>