force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_Other_Fields__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Other_Fields__c</fullName>
    <label>書類不備_その他_記入欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>