force-app/main/default/objects/Customercenter_CallData__c/fields/Incomplete_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_PostalCode__c</fullName>
    <label>書類不備_送付先郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>