force-app/main/default/objects/Customercenter_CallData__c/fields/IncompleteNoticeCreationDate__c.field-meta.xml
<CustomField>
    <fullName>IncompleteNoticeCreationDate__c</fullName>
    <label>不備通知作成日時</label>
    <type>DateTime</type>
</CustomField>