force-app/main/default/objects/Customercenter_CallData__c/fields/individual_liability_Yes__c.field-meta.xml
<CustomField>
    <fullName>individual_liability_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>個賠（個賠特約含む）で被保険者住所変更に伴う被保険者の範囲の変更_有</label>
    <type>Checkbox</type>
</CustomField>