force-app/main/default/objects/Customercenter_CallData__c/fields/InheritanceDeme__c.field-meta.xml
<CustomField>
    <fullName>InheritanceDeme__c</fullName>
    <label>デメ継承</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>