force-app/main/default/objects/Customercenter_CallData__c/fields/InitialRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>InitialRegistrationDate__c</fullName>
    <label>初度登録年月</label>
    <type>Date</type>
</CustomField>