force-app/main/default/objects/Customercenter_CallData__c/fields/InquiryDetails__c.field-meta.xml
<CustomField>
    <fullName>InquiryDetails__c</fullName>
    <label>問い合わせ詳細</label>
    <type>TextArea</type>
</CustomField>