force-app/main/default/objects/Customercenter_CallData__c/fields/Insured_SAddressKanaInCaliA_ItemNo454__c.field-meta.xml
<CustomField>
    <fullName>Insured_SAddressKanaInCaliA_ItemNo454__c</fullName>
    <label>個賠Ａ欄被保険者住所カナ（項番454）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>