force-app/main/default/objects/Customercenter_CallData__c/fields/InsuredPerson_SAddressInKana__c.field-meta.xml
<CustomField>
    <fullName>InsuredPerson_SAddressInKana__c</fullName>
    <label>被保険者住所カナ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>