force-app/main/default/objects/Customercenter_CallData__c/fields/InsuredPerson_SAddressInKanji__c.field-meta.xml
<CustomField>
    <fullName>InsuredPerson_SAddressInKanji__c</fullName>
    <label>被保険者住所漢字</label>
    <length>64</length>
    <type>Text</type>
</CustomField>