force-app/main/default/objects/Customercenter_CallData__c/fields/JiketsuSuspension_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>JiketsuSuspension_Registration_Date__c</fullName>
    <label>自継停止_登録日時</label>
    <type>Date</type>
</CustomField>