force-app/main/default/objects/Customercenter_CallData__c/fields/Lump_SumPaymentForTotalLoss__c.field-meta.xml
<CustomField>
    <fullName>Lump_SumPaymentForTotalLoss__c</fullName>
    <label>全損一時金</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>