force-app/main/default/objects/Customercenter_CallData__c/fields/MaximumLoadingCapacity__c.field-meta.xml
<CustomField>
    <fullName>MaximumLoadingCapacity__c</fullName>
    <label>最大積載量</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>