force-app/main/default/objects/Customercenter_CallData__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>型式</label>
    <length>20</length>
    <type>Text</type>
</CustomField>