force-app/main/default/objects/Customercenter_CallData__c/fields/MovedOut__c.field-meta.xml
<CustomField>
    <fullName>MovedOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>転居済</label>
    <type>Checkbox</type>
</CustomField>