force-app/main/default/objects/Customercenter_CallData__c/fields/NamedBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>NamedBeneficiary__c</fullName>
    <label>記名被本人（年齢）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>