force-app/main/default/objects/Customercenter_CallData__c/fields/NewContact__c.field-meta.xml
<CustomField>
    <fullName>NewContact__c</fullName>
    <label>（新）日中連絡先</label>
    <type>Phone</type>
</CustomField>