force-app/main/default/objects/Customercenter_CallData__c/fields/NewContactNumber__c.field-meta.xml
<CustomField>
    <fullName>NewContactNumber__c</fullName>
    <label>新連絡先番号</label>
    <length>13</length>
    <type>Text</type>
</CustomField>