force-app/main/default/objects/Customercenter_CallData__c/fields/NewFireChange_DateOfEntry__c.field-meta.xml
<CustomField>
    <fullName>NewFireChange_DateOfEntry__c</fullName>
    <label>火新異動_入力日</label>
    <type>Date</type>
</CustomField>