force-app/main/default/objects/Customercenter_CallData__c/fields/NewGrade__c.field-meta.xml
<CustomField>
    <fullName>NewGrade__c</fullName>
    <label>（新）等級</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>