force-app/main/default/objects/Customercenter_CallData__c/fields/NewPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>NewPaymentMethod__c</fullName>
    <label>新払込方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>振込</fullName>
            </value>
            <value>
                <fullName>クレジットカード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>