force-app/main/default/objects/Customercenter_CallData__c/fields/NewPolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>NewPolicyEndDate__c</fullName>
    <label>新保険終期</label>
    <type>Date</type>
</CustomField>