force-app/main/default/objects/Customercenter_CallData__c/fields/NewPolicyStartDate__c.field-meta.xml
<CustomField>
    <fullName>NewPolicyStartDate__c</fullName>
    <label>新保険始期</label>
    <type>Date</type>
</CustomField>