force-app/main/default/objects/Customercenter_CallData__c/fields/NewPremium__c.field-meta.xml
<CustomField>
    <fullName>NewPremium__c</fullName>
    <label>新保険料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>