force-app/main/default/objects/Customercenter_CallData__c/fields/NewtCoefficient__c.field-meta.xml
<CustomField>
    <fullName>NewtCoefficient__c</fullName>
    <label>（新）事故有係数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>