force-app/main/default/objects/Customercenter_CallData__c/fields/NewValueOfVehicle__c.field-meta.xml
<CustomField>
    <fullName>NewValueOfVehicle__c</fullName>
    <label>車両新価保険金額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>