force-app/main/default/objects/Customercenter_CallData__c/fields/NoDrivingByEmployer__c.field-meta.xml
<CustomField>
    <fullName>NoDrivingByEmployer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>使用人運転無し</label>
    <type>Checkbox</type>
</CustomField>