force-app/main/default/objects/Customercenter_CallData__c/fields/NoFollow_UpRequired__c.field-meta.xml
<CustomField>
    <fullName>NoFollow_UpRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>フォロー不要</label>
    <type>Checkbox</type>
</CustomField>