force-app/main/default/objects/Customercenter_CallData__c/fields/OfficeName__c.field-meta.xml
<CustomField>
    <fullName>OfficeName__c</fullName>
    <label>対応依頼営業店名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>